Commit all pending backend updates